Spacing tweaks. Remove commented out code.  Prevent reshowing snackbar messages on refresh

--- a/src/scss/abstracts/_utilities.scss
+++ b/src/scss/abstracts/_utilities.scss
@@ -103,3 +103,7 @@
 .mb0 {
   margin-bottom: 0 !important;
 }
+
+.pb0 {
+  padding-bottom: 0 !important;
+}
